--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -16,6 +16,7 @@
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.4",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^8.16.0",
