--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-modals": "^1.2.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
 		"typescript": "^4.7.4",
