--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -39,6 +39,7 @@
 		"@elrondnetwork/erdjs-network-providers": "^1.1.0",
 		"events": "^3.3.0",
 		"process": "^0.11.10",
+		"svelte-forms": "^2.3.1",
 		"util": "^0.12.4"
 	}
 }
