--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -40,6 +40,7 @@
 		"events": "^3.3.0",
 		"process": "^0.11.10",
 		"svelte-forms": "^2.3.1",
+		"svelte-notifications": "^0.9.97",
 		"util": "^0.12.4"
 	}
 }
