--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -38,6 +38,7 @@
 		"@elrondnetwork/erdjs": "^11.0.0",
 		"@elrondnetwork/erdjs-network-providers": "^1.1.0",
 		"events": "^3.3.0",
+		"lodash": "^4.17.21",
 		"process": "^0.11.10",
 		"svelte-forms": "^2.3.1",
 		"svelte-notifications": "^0.9.97",
