--- a/meta/Cargo.toml
+++ b/meta/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "crowdfunding-meta"
+name = "amm-meta"
 version = "0.0.0"
 edition = "2018"
 publish = false
@@ -7,7 +7,7 @@ authors = [ "you",]
 
 [dev-dependencies]
 
-[dependencies.crowdfunding]
+[dependencies.amm]
 path = ".."
 
 [dependencies.elrond-wasm-debug]
