--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -37,9 +37,11 @@
 	"dependencies": {
 		"@elrondnetwork/erdjs": "^11.0.0",
 		"@elrondnetwork/erdjs-network-providers": "^1.1.0",
+		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
 		"events": "^3.3.0",
 		"lodash": "^4.17.21",
 		"process": "^0.11.10",
+		"rollup-plugin-node-polyfills": "^0.2.1",
 		"svelte-forms": "^2.3.1",
 		"svelte-notifications": "^0.9.97",
 		"util": "^0.12.4"
