--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -13,37 +13,37 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.25.0",
+		"@playwright/test": "^1.29.1",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@tailwindcss/forms": "^0.5.2",
-		"@tailwindcss/typography": "^0.5.4",
-		"autoprefixer": "^10.4.8",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@sveltejs/kit": "1.0.1",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.8",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.30.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.3",
 		"svelte-modals": "^1.2.0",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.8",
-		"typescript": "^4.7.4",
-		"vite": "^3.0.4"
+		"tailwindcss": "^3.2.4",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.3",
+		"vite-plugin-node-stdlib-browser": "^0.1.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@elrondnetwork/erdjs": "^11.0.0",
-		"@elrondnetwork/erdjs-network-providers": "^1.1.0",
-		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+		"@elrondnetwork/erdjs": "^11.1.2",
+		"@elrondnetwork/erdjs-network-providers": "^1.2.0",
 		"events": "^3.3.0",
 		"lodash": "^4.17.21",
+		"node-stdlib-browser": "^1.2.0",
 		"process": "^0.11.10",
-		"rollup-plugin-node-polyfills": "^0.2.1",
 		"svelte-forms": "^2.3.1",
-		"svelte-notifications": "^0.9.97",
-		"util": "^0.12.4"
+		"svelte-notifications": "^0.9.98",
+		"util": "^0.12.5"
 	}
 }
