--- a/fe-svelte-kit/package.json
+++ b/fe-svelte-kit/package.json
@@ -46,6 +46,7 @@
 		"process": "^0.11.10",
 		"svelte-forms": "^2.3.1",
 		"svelte-notifications": "^0.9.98",
-		"util": "^0.12.5"
+		"util": "^0.12.5",
+		"vite-plugin-ngmi-polyfill": "^0.0.2"
 	}
 }
