--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 fe-svelte-kit/* linguist-vendored
+*.js linguist-detectable=false
+*.cjs linguist-detectable=false
+*.ts linguist-detectable=false
+*.rs linguist-detectable=true
